logs/gen_hd_349075.err
  File "/home/zina.assi/Deep-Learning-project---Hallucination-Detection/create_HD_datasets.py", line 27
    del label_file, label_file.exists()
                    ^^^^^^^^^^^^^^^^^^^
SyntaxError: cannot delete function call
